src/sass/_site-nav.scss
// * {
//   outline: 1px solid tomato;
// }

%site-nav-list-utils {
  list-style: none;
  padding: 0;
  margin: 0;
}
.site-nav {
  position: absolute;
  z-index: 1000;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(0, 0, 0, 0);

  @media screen and(max-width: ($desktop - 1px)) {
    overflowx: hidden;
  }
}

.container-site-nav {
  position: relative;
  display: flex;
  align-items: center;
  background-color: rgba(0, 0, 0, 0);
}

.logo-site-nav {
  margin-top: 6px;
  margin-bottom: 6px;
  @media screen and(min-width: $tablet) {
    margin-top: 37px;
    margin-bottom: 37px;
  }
  @media screen and(min-width: $desktop) {
    position: relative;
    left: -70px;
    margin-top: 35px;
    margin-bottom: 35px;

    margin-right: 40px;
  }
}

.site-nav-list {
  @extend %site-nav-list-utils;
  display: none;
  @media screen and(min-width: $desktop) {
    display: flex;
    list-style: none;
    padding: 0;
    // margin-top: 48px;
  }
}

.link-site-nav {
  text-decoration: none;
  font-family: $primary-font;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.313;

  color: $primary-text-color;

  &:focus {
    outline: 2px solid #d41443;
    outline-offset: 1px;
  }
  &:hover {
    color: $primary-title-color;
  }
}

.site-nav-item:not(:last-child) {
  margin-right: 35px;
}

.btn-site-nav {
  height: 44px;
  padding: 0;
  margin: 0;
  border: none;
  background-color: $white;

  font-family: $primary-font;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.302;
  color: $primary-title-color;
  cursor: pointer;
}

.btn-site-nav:hover,
.btn-site-nav:focus {
  color: $primary-title-color;
  background-color: $secondary-accent-color;
  outline: 2px solid #d41443;
  outline-offset: 1px;
}

.container-btn-site-nav {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 209px;
  margin-top: 60px;
  margin-right: auto;
  margin-left: auto;
  background-color: $white;
  border-radius: 22px;
  @media screen and(min-width: $tablet) {
    width: 186px;
  }
}

.btn-icon-site-nav {
  margin-left: 16px;
  fill: rgba(0, 0, 0, 0);
  @media screen and(min-width: $tablet) {
    margin-left: 12px;
  }
}
.btn-icon-menu-site-nav {
  @media screen and(min-width: $tablet) {
    margin-left: 14px;
  }
}

.close-btn-site-nav {
  display: block;
  height: 17px;
  margin-left: 208px;
  margin-top: 24px;
  border-radius: 0;
  background-color: rgba(0, 0, 0, 0);
}

.btn-site-nav-desktop {
  display: none;
  @media screen and(min-width: $tablet) {
    display: flex;
    width: 160px;
    margin-top: 0;
    margin-right: 0;
    margin-left: auto;
  }
  @media screen and(min-width: $desktop) {
    // margin-top: 36px;
    // margin-right: 115px;
  }
}

// .btn-site-nav-desktop.is-open {
//   display: none;
// }

.btn-site-nav.mobile {
  display: block;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 49px;
  padding-right: 49px;
}

.mobile-nav-site-nav {
  position: absolute;
  display: none;
  right: 0;
  top: 0;
  background-color: rgba(225, 121, 146, 1);
  width: 250px;
  height: 502px;
  margin-left: auto;
  @media screen and(max-width: ($tablet - 1)) {
    width: 100%;
  }
  @media screen and(min-width: $tablet) {
    width: 254px;
    height: 399px;
  }
}

.mobile-nav-site-nav.is-open {
  display: block;

  @include for-size(desktop) {
    display: none;
  }
}

.burger-menu-site-nav {
  display: flex;
  align-items: center;
  position: absolute;
  top: 23px;
  right: 1px;
  box-sizing: content-box;
  width: 20px;
  height: 16px;

  background-color: rgba(0, 0, 0, 0);
  padding-left: 0;
  padding-right: 0;

  &:focus {
    background-color: rgba(0, 0, 0, 0);
  }

  &:focus {
    outline: 2px solid #d41443;
    outline-offset: 5px;
  }

  @media screen and(min-width: $tablet) {
    top: 52px;
    right: 190px;
  }

  @media screen and(min-width: $desktop) {
    display: none;
  }
}

.burger-menu-site-nav:hover,
.burger-menu-site-nav:focus {
  background-color: rgba(0, 0, 0, 0);
}

.burger-menu-site-nav .icon-true-site-nav {
  display: block;
}

.burger-menu-site-nav.is-open .icon-true-site-nav {
  display: none;
}

.burger-menu-site-nav .icon-false-site-nav {
  display: none;
}

.burger-menu-site-nav.is-open .icon-false-site-nav {
  display: block;
}

@media screen and(max-width: ($desktop - 1px)) {
  .burger-menu-site-nav.is-open {
    top: 24px;
    right: 34px;
    z-index: 2;
  }
}

@media screen {
  .burger-menu-site-nav.is-open {
    right: 0;
  }
}

.burger-menu-site-nav > span,
.burger-menu-site-nav > span::before,
.burger-menu-site-nav > span::after {
  display: block;
  position: absolute;

  width: 100%;
  height: 1px;

  background-color: #d41443;
}

.burger-menu-site-nav > span::before {
  content: '';
  top: -6px;
}

.burger-menu-site-nav > span::after {
  content: '';
  top: 6px;
}

.mobile-nav-list-site-nav {
  @extend %site-nav-list-utils;
  margin-top: 32px;
  margin-left: 21px;
  @media screen and(min-width: $tablet) {
    margin-left: 24px;

    &:focus {
      outline: 2px solid #d41443;
      outline-offset: 5px;
    }
  }
}

.mobile-nav-list-site-nav .site-nav-item:not(:first-child) {
  margin-top: 22px;
}

.link-mobile-site-nav {
  text-decoration: none;
  font-family: $primary-font;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.286;
  color: $primary-text-color;

  &:hover {
    color: #d41443;
  }
  &:focus {
    outline: 2px solid #d41443;
    outline-offset: 5px;
  }
}

//пример для фона загрузки разных размеров и плотностей
// body {
//   @media screen and(max-width: $tablet - 1) {
//     background-image: url('../images/gallery/mobile/gallary-bg.jpg');
//     @media screen and (min-device-pixel-ratio: 2),
//       screen and (min-resolution: 192dpi),
//       screen and (min-resolution: 2dppx) {
//       background-image: url('../images/gallery/mobile/gallary-bg@2x.jpg');
//     }
//   }

//   @media screen and(min-width: $tablet) {
//     background-image: url('../images/gallery/tablet/gallary-bg.jpg');
//     @media screen and (min-device-pixel-ratio: 2),
//       screen and (min-resolution: 192dpi),
//       screen and (min-resolution: 2dppx) {
//       background-image: url('../images/gallery/tablet/gallary-bg@2x.jpg');
//     }
//   }
//   @media screen and(min-width: $desktop) {
//     background-image: url('../images/gallery/desktop/gallary-bg.jpg');
//     @media screen and (min-device-pixel-ratio: 2),
//       screen and (min-resolution: 192dpi),
//       screen and (min-resolution: 2dppx) {
//       background-image: url('../images/gallery/desktop/gallary-bg@2x.jpg');
//     }
//   }
// }

